Reducing minor issues in sonar (#60)
* Reducing minor issues in sonar