@@ -67,7 +67,7 @@ public class LatencyProblem01B {
     // @formatter:off
     Function<String, List<Integer>> toDigits = s -> s.chars()
         .mapToObj(is -> Integer.valueOf(is))
-        .collect(Collectors.toList());
+        .toList();
 
     Function<List<Integer>, String> concatDigits = li -> li.stream()
         .map(String::valueOf)
@@ -136,7 +136,7 @@ public class LatencyProblem01B {
     Function<List<String>, Stream<String>> fetchListAsync = s -> {
         List<CompletableFuture<String>> futureRequests = s.stream()
             .map(fetchAsyncJ9)
-            .collect(toList());
+            .toList();
 
         return futureRequests.stream()
             .map(CompletableFuture::join)
@@ -146,7 +146,7 @@ public class LatencyProblem01B {
     Function<List<String>, Stream<String>> fetchListAsyncEither = list -> {
         var futureRequests = list.stream()
             .map(fetchAsyncEither)
-            .collect(toList());
+            .toList();
 
         return futureRequests.stream()
             .map(CompletableFuture::join)
@@ -158,7 +158,7 @@ public class LatencyProblem01B {
     Function<List<String>, Stream<String>> fetchListAsyncJ8 = s -> {
         List<CompletableFuture<String>> futureRequests = s.stream()
             .map(fetchAsyncJ8)
-            .collect(toList());
+            .toList();
 
         return futureRequests
             .stream()
